--- a/frontend-react-js/src/components/ActivityContent.css
+++ b/frontend-react-js/src/components/ActivityContent.css
@@ -10,7 +10,7 @@
 }
 
 .activity_content_wrap .activity_avatar {
-  background: rgb(149,0,255);
+  background: var(--accent-color);
   height: 60px;
   width: 60px;
   border-radius: 999px;
@@ -30,7 +30,7 @@
 
 .activity_content a.activity_identity .display_name {
   font-weight: 800;
-  color: #fff;
+  color: var(--text-color-dark);
 }
 
 .activity_content  a.activity_identity .handle {
@@ -61,7 +61,7 @@
 }
 
 .activity_content .message {
-  color: #fff;
+  color: var(--text-color-dark);
   font-size: 16px;
   margin-top: 8px;
 }
