--- a/frontend-react-js/src/components/ActivityForm.css
+++ b/frontend-react-js/src/components/ActivityForm.css
@@ -22,7 +22,7 @@ form.activity_form textarea {
 }
 
 form.activity_form textarea:focus {
-  border: solid 1px rgb(149,0,255,1);
+  border: solid 1px var(--accent-color);
 }
 
 form.activity_form .submit {
@@ -45,7 +45,7 @@ form.activity_form button[type='submit'] {
   padding: 10px 20px;
   font-size: 16px;
   margin-left: 12px;
-  background: rgba(149,0,255,1);
+  background: var(--accent-color);
   color: #fff;
 }
 
@@ -61,7 +61,7 @@ form.activity_form .expires_at_field {
   display: flex;
   gap: 12px;
   position: relative;
-  border-left: solid 1px rgba(149,0,255,0.7);
+  border-left: solid 1px var(--background-color);
 }
 
 form.activity_form .expires_at_field .icon {
@@ -79,7 +79,7 @@ form.activity_form select {
   outline: none;
   width: 120px;
   height: 38px;
-  font-size: 16px;
+  font-size: var(--font-size-body);
   font-weight: 600;
   display: block;
   padding: 10px 8px;
@@ -92,7 +92,7 @@ form.activity_form select {
   -moz-appearance: none;
   appearance: none;
   color: #fff;
-  background-color: rgba(149,0,255,0.8);
+  background-color: var(--accent-color);
   background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
   background-repeat: no-repeat;
   background-position-x: 100%;
