--- a/frontend-react-js/src/components/JoinSection.css
+++ b/frontend-react-js/src/components/JoinSection.css
@@ -1,7 +1,7 @@
 .join {
   display: flex;
   flex-direction: column;
-  background: var(--fg);
+  background: var(--fg-color);
   border-radius: 8px;
   margin-top: 24px;
 }
