--- a/frontend-react-js/src/components/DesktopNavigation.css
+++ b/frontend-react-js/src/components/DesktopNavigation.css
@@ -7,7 +7,7 @@ nav {
 nav .logo {
   width: 48px;
   height: 48px;
-  fill: var(--secondary-color);
+  fill: rgb(149,0,255);
 }
 
 nav a.primary {
@@ -34,16 +34,16 @@ nav a.primary:hover .icon {
 }
 
 nav a.primary.active {
-  color: var(--secondary-color) !important;
+  color: rgb(149,0,255) !important;
   font-weight: 600;
 }
 nav a.primary.active svg {
-  fill: var(--secondary-color) !important;
+  fill: rgb(149,0,255) !important;
 }
 
 nav button.post {
   display: block;
-  background: var(--accent-color);
+  background: rgba(149,0,255,1);
   color: #fff;
   border: none;
   text-decoration: none;
