--- a/frontend-react-js/src/components/ProfileInfo.css
+++ b/frontend-react-js/src/components/ProfileInfo.css
@@ -22,7 +22,7 @@
 }
 
 .profile-info .profile-avatar{
-  background: var(--accent-color);
+  background: rgb(149,0,255);
   height: 40px;
   width: 40px;
   border-radius: 999px;
