--- a/frontend-react-js/src/components/SuggestedUserItem.css
+++ b/frontend-react-js/src/components/SuggestedUserItem.css
@@ -8,7 +8,7 @@
 
 .suggested_users_title {
   font-size: 16px;
-  color: var(--text-color-dark);
+  color: #fff;
   padding: 16px;
   border-bottom: solid 1px rgb(31,36,49);
 }
@@ -16,7 +16,7 @@
 .suggested_users .user {
   text-decoration: none;
   font-size: 16px;
-  color: var(--text-color-dark);
+  color: #fff;
   padding: 16px;
   display: flex;
 }
@@ -31,7 +31,7 @@
 }
 
 .suggested_users .avatar {
-  background: var(--secondary-color);
+  background: rgb(149,0,255);
   height: 36px;
   width: 36px;
   border-radius: 999px;
